--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
+* {
+  font-family: "Do Hyeon", sans-serif;
+}
 .hidden {
   display: none;
+}
+.bg {
+  background-size: contain;
+}
+#center {
+  line-height: 50px;
+  text-align: center;
+}
+ul {
+  display: table;
+  margin-left: auto;
+  margin-right: auto;
 }
